--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:/m8YRHDenMA9d/g884N75ZZZIxVAwCwUSzil3gLIwHU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8082
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -11,7 +11,7 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
-banana
+
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -26,8 +26,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='qr'
-DB_USERNAME=root
-DB_PASSWORD='Vimal555!!'
+# DB_USERNAME=root
+# DB_PASSWORD='Vimal555!!'
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
