--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@tanstack/react-table": "^8.21.2",
         "dropdown-menu": "^0.1.1",
+        "fabric": "^6.7.0",
         "formik": "^2.4.6",
         "framer-motion": "^12.4.1",
         "prettier": "^3.4.2",
